Change in picture

--- a/ex3.html
+++ b/ex3.html
@@ -13,9 +13,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Star_icon-72a7cf.svg"></li>
         <ol>
             <li><img src="https://cdn.icon-icons.com/icons2/196/PNG/128/parachute_23752.png"></li>
-            <p>Available <a href="https://cdn.icon-icons.com/icons2/196/PNG/128/parachute_23752.png">here</a></p>
-            <p>Designer:  Elegantthemes</p>
-            <p>Licence:  Creative Commons Attribution 2.5</p>
+            <a title="By Elegant Themes [GPL (http://www.gnu.org/licenses/gpl.html)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Circle-icons-parachute.svg"><img width="512" alt="Circle-icons-parachute" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Circle-icons-parachute.svg/512px-Circle-icons-parachute.svg.png"></a>
             <li><img src=".//heart.png"></li>
             <li><a href="https://en.wikipedia.org/wiki/Doge_of_Venice">Doge of Venice</a></li>
             <li>More about html <a href="https://www.w3schools.com/html/default.asp">here</a></li>
